--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
      <title> kek </title>
      <style>
        body{
-  	background-color: #FFFFFF;
+  	background-color: #4B0082;
         text-align: center;
         }
        h1,h2,h3,h4,h5{
-        color: #000000;
+        color: #ADFF2F;
         font-size: 8em;
-        font-family: 'comic sans';
+        font-family: 'Helvetica';
         }
 
         </style>
