--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   	background-color: #4B0082;
         text-align: center;
         }
-       h1,h2,h3,h4,h5{
+        {
         color: #ADFF2F;
         font-size: 8em;
         font-family: 'Helvetica';
@@ -31,6 +31,7 @@
    <h3> WE LIKE FORTNITE </h2>
    <h2> WE LIKE FORTNITE </h3>
    <h1> WE LIKE FORTNITE </h4>
-<h4> MULLAH ALRAMAN ACKABR JIHAD INSHALLAM SALLAH RACKMAN ALLAHHUACKBAR </h4>
+<h4> Do you remember </h4>
+	  
   </body>
 </html>
