--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
    <h3> WE LIKE FORTNITE </h2>
    <h2> WE LIKE FORTNITE </h3>
    <h1> WE LIKE FORTNITE </h4>
-<h4> fi bed al'ahyan 'atasa'al madha 'afeal fi hayati </h4>
-	  
+   <h4> fi bed al'ahyan 'atasa'al madha 'afeal fi hayati </h4>
+	       <style>
+       body{
+  	background-color: #4C0582;
+        text-align: center;
+        }
+        {
+        color: #ADFF2F;
+        font-size: 8em;
+        font-family: 'Times New Roman';
+        }
+
+        </style>
+
+   <h3> This site exists only to show how messed up my sense of humor is and paint a clear picture of the flaming abyss of absolute stupidity that is my mind. </h3>
   </body>
 </html>
