--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <h4> Mr Peronis </h4>
    <h5> Mr Peronis </h5>
 	<img src="20181014_000819.jpg" alt="toucher">
-        <img src="deletethis.PNG" alt="gamer">
+        <img src="Deletethis.PNG" alt="gamer">
    <h5> WE LIKE FORTNITE </h5>
    <h4> WE LIKE FORTNITE</h1>
    <h3> WE LIKE FORTNITE </h2>
