--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 
         </style>
 
-   <h4> This site exists only to show how messed up my sense of humor is and paint a clear picture of the flaming abyss of absolute stupidity that is my mind. </h3>
+   <h4> This site exists only to show how messed up my sense of humor is and paint a clear picture of the flaming abyss of absolute stupidity that is my mind. Thanks for hosting this though, had a lot of fun. Maybe next year I'll actually do something.</h3>
   </body>
 </html>
