--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         text-align: center;
         }
         {
-        color: #ADFF2F;
+        color: #ADDF2F;
         font-size: 20em;
         font-family: 'Helvetica';
         }
